Changing padding to fix horizontal scroll w/ header and footer on trade page. Updating font to Lato.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,7 +19,7 @@
  */
 body {
     padding-top: 60px;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Lato', sans-serif;
 }
 
 div.alert {
